# tree-sitter-clips

./: .gitignore  Cargo.toml  README.md  grammar.js  package.json
bindings/c/: tree-sitter-clips.pc.in
bindings/python/tree_sitter_clips/: __init__.py  binding.c
bindings/swift/TreeSitterClips/: clips.h
queries/clips/: highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comment.txt  deffacts.txt  deffunction.txt  defmethod.txt  defrule1.txt  defrule2.txt  defrule3.txt  deftemplate.txt  do-for-all-facts.txt  do-for-fact.txt  if-then-else.txt  loop-for-count.txt
